--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             background: #061a17;
             padding: 20px;
             border-radius: 12px;
+            justify-content: center;
+            align-items: center;
             box-shadow: 0 0 20px #00ff7f33;
             border: 1px solid #00ff7f;
         }
@@ -100,6 +102,8 @@
             padding: 15px;
             border: 1px solid #00ff7f;
             margin-top: 10px;
+            justify-content: center;
+            align-items: center;
             border-radius: 8px;
             box-shadow: 0 0 10px #00ff7f33;
         }
