--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
         table {
             width: 100%;
             margin-top: 20px;
+            justify-content: center;
+            align-items: center;
             border-collapse: collapse;
             background: #061a17;
             box-shadow: 0 0 15px #00ff7f33;
